--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div class="slides">
         <section data-markdown="talk.md"
                  data-separator="^---"
-                 data-separator-vertical="^___"
+                 data-separator-vertical="^--"
                  data-charset="utf-8"
                  data-notes="^Note:">
         </section>
@@ -48,7 +48,7 @@
         center: true,
         slideNumber: true,
         theme: Reveal.getQueryHash().theme, // available themes are in /css/theme
-        transition: Reveal.getQueryHash().transition || 'fade', // default/cube/page/concave/convex/zoom/linear/fade/none
+        transition: Reveal.getQueryHash().transition || 'convex', // default/cube/page/concave/convex/zoom/linear/fade/none
         // Optional libraries used to extend on reveal.js
         dependencies: [
           { src: 'https://cdnjs.cloudflare.com/ajax/libs/reveal.js/3.3.0/js/classList.js', condition: function() { return !document.body.classList; } },
